Fixed import error and added Day2.py

--- a/days/01-03-datetimes/code/Day2.ipynb
+++ b/days/01-03-datetimes/code/Day2.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "'''Extract datetimes from log entries and calculate the time\n",
     "   between the first and last shutdown events'''\n",
-    "from datetime import datetime as dt\n",
+    "from datetime import datetime\n",
     "import os\n",
     "import urllib.request\n",
     "\n",
