--- a/days/16-18-listcomprehensions-generators/Day3_bite26.ipynb
+++ b/days/16-18-listcomprehensions-generators/Day3_bite26.ipynb
@@ -2,10 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "bites = {6: 'PyBites Die Hard',\n",
+    "         7: 'Parsing dates from logs',\n",
+    "         9: 'Palindromes',\n",
+    "         10: 'Practice exceptions',\n",
+    "         11: 'Enrich a class with dunder methods',\n",
+    "         12: 'Write a user validation function',\n",
+    "         13: 'Convert dict in namedtuple/json',\n",
+    "         14: 'Generate a table of n sequences',\n",
+    "         15: 'Enumerate 2 sequences',\n",
+    "         16: 'Special PyBites date generator',\n",
+    "         17: 'Form teams from a group of friends',\n",
+    "         18: 'Find the most common word',\n",
+    "         19: 'Write a simple property',\n",
+    "         20: 'Write a context manager',\n",
+    "         21: 'Query a nested data structure'}\n",
+    "exclude_bites = {6, 10, 16, 18, 21}\n",
+    "\n",
+    "\n",
+    "def filter_bites(bites=bites, bites_done=exclude_bites):\n",
+    "    \"\"\"return the bites dict with the exclude_bites filtered out\"\"\"\n",
+    "    return{key:value for key,value in bites.items() if key not in bites_done}"
+   ]
   }
  ],
  "metadata": {
