--- a/days/19-21-itertools/code/bite_17.ipynb
+++ b/days/19-21-itertools/code/bite_17.ipynb
@@ -1,75 +1,68 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from itertools import product, permutations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "base = [1,2,3,4,5,6,7,8]\n",
+    "Write a function called friends_teams that takes a list of friends, a team_size (type int, default=2) and order_does_matter (type bool, default False).\n",
     "\n",
-    "# for combination in product(base, repeat=5):\n",
-    "#     print(combination)\n",
-    "    \n",
-    "combinations = [combination for combination in product(base, repeat=5)]"
+    "Return all possible teams. Hint: if order matters (order_does_matter=True), the number of teams would be greater.\n",
+    "\n",
+    "See the tests for more details. Enjoy :)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# combinations"
+    "from itertools import combinations, permutations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "friends = \"Bob Dante\".split()\n",
+    "team_size = 2\n",
+    "order_does_matter = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def friends_teams(friends, team_size=2, order_does_matter=False):\n",
+    "    \n",
+    "    if order_does_matter == False:\n",
+    "        return combinations(friends,team_size)\n",
+    "    else:\n",
+    "        return permutations(friends,team_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20160"
+       "<itertools.permutations at 0x106c27830>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(list(permutations(base,6)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[(1, 2), (2, 1)]"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "permutations"
+    "friends_teams(friends=friends,order_does_matter=True)"
    ]
   },
   {
