--- a/days/19-21-itertools/code/bite_65.ipynb
+++ b/days/19-21-itertools/code/bite_65.ipynb
@@ -10,7 +10,7 @@
     "import os\n",
     "import urllib.request\n",
     "import string\n",
-    "\n",
+    " \n",
     "# PREWORK\n",
     "DICTIONARY = os.path.join('/tmp', 'dictionary.txt')\n",
     "urllib.request.urlretrieve('http://bit.ly/2iQ3dlZ', DICTIONARY)\n",
@@ -38,6 +38,47 @@
     "    \n",
     "    return [list(itertools.permutations(draw,i)) for i in range(2,len(draw)+1)]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import os\n",
+    "import urllib.request\n",
+    "\n",
+    "# PREWORK\n",
+    "DICTIONARY = os.path.join('/tmp', 'dictionary.txt')\n",
+    "urllib.request.urlretrieve('http://bit.ly/2iQ3dlZ', DICTIONARY)\n",
+    "\n",
+    "with open(DICTIONARY) as f:\n",
+    "    dictionary = set([word.strip().lower() for word in f.read().split()])\n",
+    "\n",
+    "\n",
+    "def get_possible_dict_words(draw):\n",
+    "    \"\"\"Get all possible words from a draw (list of letters) which are\n",
+    "       valid dictionary words. Use _get_permutations_draw and provided\n",
+    "       dictionary\"\"\"\n",
+    "    permutations = [''.join(word).lower()\n",
+    "                    for word in _get_permutations_draw(draw)]\n",
+    "    return set(permutations) & set(dictionary)\n",
+    "\n",
+    "\n",
+    "def _get_permutations_draw(draw):\n",
+    "    \"\"\"Helper to get all permutations of a draw (list of letters), hint:\n",
+    "       use itertools.permutations (order of letters matters)\"\"\"\n",
+    "    for i in range(1, 8):\n",
+    "        yield from list(itertools.permutations(draw, i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
